style(assets-ext): trailing newlines + List.getFirst() idioms
Adds end-of-class blank lines across seven files and switches two
fields.get(0) calls in Cip113RegistryNodeParser to fields.getFirst()
(Java 21 SequencedCollection idiom — same semantics).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>